--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,15 @@
 cmake_minimum_required(VERSION 3.10.0)
-
-# TODO: change
 project (quantik) 
 
-# TODO: change
-add_executable(quantik main.cpp)
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# Include all source files in the current directory
+file(GLOB SOURCES "*.cpp")
+
+# Include all header files in the current directory
+file(GLOB HEADERS "*.hpp")
+
+# Add executable target
+add_executable(quantik ${SOURCES} ${HEADERS})
