--- a/quantik/CMakeLists.txt
+++ b/quantik/CMakeLists.txt
@@ -1,21 +1,16 @@
 cmake_minimum_required(VERSION 3.10.0)
-project (quantik) 
+project (quantik)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# # Profiling
-# set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pg")
-# set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
-# set( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
-# set( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
+# Prototype I
+file(GLOB P1_SOURCES "./prototype_one/*.cpp")
+file(GLOB P1_HEADERS "./prototype_one/*.hpp")
+add_executable(prototype_one ${P1_SOURCES} ${P1_HEADERS})
 
-# Include all source files in the current directory
-file(GLOB SOURCES "*.cpp")
-
-# Include all header files in the current directory
-file(GLOB HEADERS "*.hpp")
-
-# Add executable target
-add_executable(quantik ${SOURCES} ${HEADERS})
+# Prototype II
+file(GLOB P2_SOURCES "./prototype_two/*.cpp")
+file(GLOB P2_HEADERS "./prototype_two/*.hpp")
+add_executable(prototype_two ${P2_SOURCES} ${P2_HEADERS})
