--- a/quantik_cont/Pipfile
+++ b/quantik_cont/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+matplotlib = "==3.9.2"
+numpy = "==2.1.3"
+scikit-learn = "==1.5.2"
+torch = "==2.5.1"
 
 [dev-packages]
 
